--- a/index.html
+++ b/index.html
@@ -9,7 +9,13 @@
   <body class="site">
 
     <img class="lounge" src="images/lounge.jpg" alt="lounge">
-    <p class="verbage">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div class="lounge-verbage">
+      <p class="lounge-text">
+        <strong>Area 2071 Environment</strong>
+        In this space, innovators will meet and use the best technology of today to design the future
+      <a href="">LEARN MORE</a>
+      </p>
+    </div>
 
   </body>
 </html>
