more content and another nested grid

--- a/index.html
+++ b/index.html
@@ -8,6 +8,148 @@
   </head>
   <body class="site">
 
+
+    <!--
+    The UAE has a vision for the future
+    based on radical creativity, curiosity
+    and generosity and invite the world's
+    most curious minds and creative
+    institutions to co-create this future
+
+    with us.
+
+    Creative thinkers from government,
+
+    businessI and culture will design the
+    future together.
+
+
+
+
+
+
+
+    We will unlock people's potential to imagine and
+    create new solutions to our greatest challenges
+
+    AREA 2071 is a creative ecosystem to
+    design the future that includes
+    government, creative individuals,
+    business, and people from all walks of
+    life. We've come together to imagine
+    and create solutions to the world's
+
+    most pressing questions.
+
+    "We are building anew reality for our people, a new future
+    for our children, and a new model of development."
+
+    — Sheikh Mohammed bin Rashid al Maktoum
+
+    Area 2071
+Environment
+
+in this space, rnnuvaturs will meet and
+use the hest taohnulogy at today ta
+
+uesrgh the future
+
+all next a
+
+Startups
+
+Ehtrepreheurs looking to rhhevate and make
+
+a grahar rmpact
+
+Public
+
+Came meet others who want to make a
+
+change.
+
+We create a Vlsion
+of the future
+
+We will grow together rh thra commuhrty aha thrrve.
+As praneers, we will rerge a new path to address
+
+human needs
+
+"I! mix: a
+
+Government
+
+PQWerrul lndlvlduals luuklng to work with the
+
+best mlnds to hurld the future.
+
+Corporate
+
+Powarful argahrzatrohs cerraheratrhg to hurt: a
+
+better future.
+
+The Area 2071 Challenge
+
+Campete oh a hattrerreru to salve a grahar problem and wrh a year of rncuhatron and
+
+rhvaruahre resources ta make rt happen. Vour success, is averyune's success.
+
+26 Jul, 2017
+
+The Incubator launch is drawing
+
+the attention
+
+ACCEPT rug CNALLENEE 4r
+
+23 Jul, 2017 15 Jul, 2017
+Area 2071 startup has raised UAE's MOHESR has funded new
+$5 million wing for Area 207
+
+Area 2071. All ﬁghts reserved.
+  -->
+
+    <img class="girl-nebula-img" src="images/lounge.jpg">
+    <div class="girl-nebula">
+      <h2>
+        We will unlock people's potential to imagine and
+        create new solutions to our greatest challenges
+      </h2>
+      <p class="girl-nebula-text-1">
+        The UAE has a vision for the future
+        based on radical creativity, curiosity
+        and generosity and invite the world's
+        most curious minds and creative
+        institutions to co-create this future
+        with us.
+      </p>
+      <u>
+        Creative thinkers from government,
+        business, and culture will design the
+        future together.
+      </u>
+      <p class="girl-nebula-text-2">
+        AREA 2071 is a creative ecosystem to
+        design the future that includes
+        government, creative individuals,
+        business, and people from all walks of
+        life. We've come together to imagine
+        and create solutions to the world's
+        most pressing questions.
+      </p>
+    </div>
+
+    <div class="quote">
+      <img class ="quote-img">
+      <p class="quote-text">"We are building a new reality for our people, a new future for our children,
+         and a new model of development."
+      </p>
+      <p class="quote-author">
+        — Sheikh Mohammed bin Rashid al Maktoum
+      </p>
+    </div>
     <img class="lounge" src="images/lounge.jpg" alt="lounge">
     <div class="lounge-verbage">
       <p class="lounge-text">
