added images and explore section

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
   <body class="site">
 
+    <div class="topbar">ABOUT PRODUCTS & DESIGN CHALLENGE  ------ ENGLSH / LANGUAGE </div>
+
 
     <!--
     The UAE has a vision for the future
@@ -111,7 +113,13 @@ $5 million wing for Area 207
 Area 2071. All ﬁghts reserved.
   -->
 
-    <img class="girl-nebula-img" src="images/lounge.jpg">
+    <!-- <div class="explore"> -->
+      <h1 class="explore-text">Explore new ways to garden.</h1>
+      <img class="explore-img" src="images/kaleidoscope-faded.jpg" alt="explore-image">
+      <img class="explore-img-small" src="images/kaleidoscope-faded-small.jpg" alt="explore-image-small">
+    <!-- </div> -->
+
+    <img class="girl-nebula-img" src="images/girl-nebula.jpg">
     <div class="girl-nebula">
       <h2>
         We will unlock people's potential to imagine and
@@ -141,6 +149,8 @@ Area 2071. All ﬁghts reserved.
       </p>
     </div>
 
+    <!--
+
     <div class="quote">
       <img class ="quote-img">
       <p class="quote-text">"We are building a new reality for our people, a new future for our children,
@@ -157,7 +167,7 @@ Area 2071. All ﬁghts reserved.
         In this space, innovators will meet and use the best technology of today to design the future
       <a href="">LEARN MORE</a>
       </p>
-    </div>
+    </div> -->
 
   </body>
 </html>
