Added topo graphic to lounge section + fixed various grids

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ Area 2071. All ﬁghts reserved.
       </p>
     </div>
 
-    <!--
+
 
     <div class="quote">
       <img class ="quote-img">
@@ -167,7 +167,10 @@ Area 2071. All ﬁghts reserved.
         In this space, innovators will meet and use the best technology of today to design the future
       <a href="">LEARN MORE</a>
       </p>
-    </div> -->
+    </div>
+    <div class="lounge-topo">
+      <img src="images/topo-single-fade-3.jpg" alt="topo-graphic" class="lounge-topo">
+    </div>
 
   </body>
 </html>
