row spacing and chevron image

--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@ Area 2071. All ﬁghts reserved.
         and generosity and invite the world's
         most curious minds and creative
         institutions to co-create this future
-        with us.
+        with us.<br/><br/>
+        <u>
+          Creative thinkers from government,
+          business, and culture will design the
+          future together.
+        </u>
       </p>
-      <u>
-        Creative thinkers from government,
-        business, and culture will design the
-        future together.
-      </u>
       <p class="girl-nebula-text-2">
         AREA 2071 is a creative ecosystem to
         design the future that includes
@@ -152,10 +152,10 @@ Area 2071. All ﬁghts reserved.
 
 
     <div class="quote">
-      <img class ="quote-img">
+      <img class ="quote-img" src="images/chevrons.png" alt="chevrons">
       <p class="quote-text">"We are building a new reality for our people, a new future for our children,
          and a new model of development."
-      </p>
+      </p><br/>
       <p class="quote-author">
         — Sheikh Mohammed bin Rashid al Maktoum
       </p>
@@ -170,6 +170,9 @@ Area 2071. All ﬁghts reserved.
     </div>
     <div class="lounge-topo">
       <img src="images/topo-single-fade-3.jpg" alt="topo-graphic" class="lounge-topo">
+    </div>
+
+    <div class="foot"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </div>
 
   </body>
