created the vision section with 4 images

--- a/index.html
+++ b/index.html
@@ -12,49 +12,8 @@
 
 
     <!--
-    The UAE has a vision for the future
-    based on radical creativity, curiosity
-    and generosity and invite the world's
-    most curious minds and creative
-    institutions to co-create this future
-
-    with us.
-
-    Creative thinkers from government,
-
-    businessI and culture will design the
-    future together.
 
 
-
-
-
-
-
-    We will unlock people's potential to imagine and
-    create new solutions to our greatest challenges
-
-    AREA 2071 is a creative ecosystem to
-    design the future that includes
-    government, creative individuals,
-    business, and people from all walks of
-    life. We've come together to imagine
-    and create solutions to the world's
-
-    most pressing questions.
-
-    "We are building anew reality for our people, a new future
-    for our children, and a new model of development."
-
-    — Sheikh Mohammed bin Rashid al Maktoum
-
-    Area 2071
-Environment
-
-in this space, rnnuvaturs will meet and
-use the hest taohnulogy at today ta
-
-uesrgh the future
 
 all next a
 
@@ -70,8 +29,7 @@ Came meet others who want to make a
 
 change.
 
-We create a Vlsion
-of the future
+
 
 We will grow together rh thra commuhrty aha thrrve.
 As praneers, we will rerge a new path to address
@@ -80,11 +38,7 @@ human needs
 
 "I! mix: a
 
-Government
 
-PQWerrul lndlvlduals luuklng to work with the
-
-best mlnds to hurld the future.
 
 Corporate
 
@@ -170,6 +124,35 @@ Area 2071. All ﬁghts reserved.
     </div>
     <div class="lounge-topo">
       <img src="images/topo-single-fade-3.jpg" alt="topo-graphic" class="lounge-topo">
+    </div>
+
+    <div class="vision">
+      <h1 class="title-v">We create a Vision
+      of the future
+    </h1>
+      <p class="text-v">
+        We will grow together in this community and thrive. As pioneers, we will forge a new path to address human needs.
+      </p>
+      <img class="bking" src="images/bking.jpg" alt="Government">
+      <p class="text-gov">
+        <strong>Government</strong>
+        Powerful individuals looking to work with the best minds to build the future.
+      </p>
+      <img class="laptop" src="images/laptop.jpg" alt="Startups">
+      <p class="text-startup">
+        <strong>Startups</strong>
+        Entreoreneurs looking to innovate and make a global impact.
+      </p>
+      <img  class="boardroom" src="images/boardroom.jpg" alt="Corporate">
+      <p class="text-corp">
+        <strong>Corporate</strong>
+        Powerful organisations collaborating to build a better future.
+      </p>
+      <img class="pedestrians" src="images/pedestrians2.jpg" alt="Public">
+      <p class="text-public">
+        <strong>Public</strong>
+        Come meet others who want to make a change.
+      </p>
     </div>
 
     <div class="foot"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
