vision section alignment
Co-authored-by: Paul Rail <paul.a.rail@gmail.com>

--- a/index.html
+++ b/index.html
@@ -8,70 +8,11 @@
   </head>
   <body class="site">
 
-    <div class="topbar">ABOUT PRODUCTS & DESIGN CHALLENGE  ------ ENGLSH / LANGUAGE </div>
+    <div class="topbar">ABOUT PRODUCTS & DESIGN CHALLENGE  ------ ENGLISH / LANGUAGE </div>
 
-
-    <!--
-
-
-
-all next a
-
-Startups
-
-Ehtrepreheurs looking to rhhevate and make
-
-a grahar rmpact
-
-Public
-
-Came meet others who want to make a
-
-change.
-
-
-
-We will grow together rh thra commuhrty aha thrrve.
-As praneers, we will rerge a new path to address
-
-human needs
-
-"I! mix: a
-
-
-
-Corporate
-
-Powarful argahrzatrohs cerraheratrhg to hurt: a
-
-better future.
-
-The Area 2071 Challenge
-
-Campete oh a hattrerreru to salve a grahar problem and wrh a year of rncuhatron and
-
-rhvaruahre resources ta make rt happen. Vour success, is averyune's success.
-
-26 Jul, 2017
-
-The Incubator launch is drawing
-
-the attention
-
-ACCEPT rug CNALLENEE 4r
-
-23 Jul, 2017 15 Jul, 2017
-Area 2071 startup has raised UAE's MOHESR has funded new
-$5 million wing for Area 207
-
-Area 2071. All ﬁghts reserved.
-  -->
-
-    <!-- <div class="explore"> -->
-      <h1 class="explore-text">Explore new ways to garden.</h1>
-      <img class="explore-img" src="images/kaleidoscope-faded.jpg" alt="explore-image">
-      <img class="explore-img-small" src="images/kaleidoscope-faded-small.jpg" alt="explore-image-small">
-    <!-- </div> -->
+    <h1 class="explore-text">Explore new ways to garden.</h1>
+    <img class="explore-img" src="images/kaleidoscope-faded.jpg" alt="explore-image">
+    <img class="explore-img-small" src="images/kaleidoscope-faded-small.jpg" alt="explore-image-small">
 
     <img class="girl-nebula-img" src="images/girl-nebula.jpg">
     <div class="girl-nebula">
@@ -135,22 +76,22 @@ Area 2071. All ﬁghts reserved.
       </p>
       <img class="bking" src="images/bking.jpg" alt="Government">
       <p class="text-gov">
-        <strong>Government</strong>
+        <strong>Government</strong><br/><br/>
         Powerful individuals looking to work with the best minds to build the future.
       </p>
       <img class="laptop" src="images/laptop.jpg" alt="Startups">
       <p class="text-startup">
-        <strong>Startups</strong>
+        <strong>Startups</strong><br/><br/>
         Entreoreneurs looking to innovate and make a global impact.
       </p>
       <img  class="boardroom" src="images/boardroom.jpg" alt="Corporate">
       <p class="text-corp">
-        <strong>Corporate</strong>
+        <strong>Corporate</strong><br/><br/>
         Powerful organisations collaborating to build a better future.
       </p>
       <img class="pedestrians" src="images/pedestrians2.jpg" alt="Public">
       <p class="text-public">
-        <strong>Public</strong>
+        <strong>Public</strong><br/><br/>
         Come meet others who want to make a change.
       </p>
     </div>
