adjusting row heights and margins to vison section

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Area 2071 Challenge</title>
+    <link href="https://fonts.googleapis.com/css?family=Palanquin" rel="stylesheet">
+
     <!-- Primary CSS -->
     <link rel="stylesheet" href="style.css">
   </head>
@@ -68,35 +70,45 @@
     </div>
 
     <div class="vision">
-      <h1 class="title-v">We create a Vision
+      <h1 class="title-v">We create a vision
       of the future
     </h1>
       <p class="text-v">
         We will grow together in this community and thrive. As pioneers, we will forge a new path to address human needs.
       </p>
       <img class="bking" src="images/bking.jpg" alt="Government">
-      <p class="text-gov">
-        <strong>Government</strong><br/><br/>
-        Powerful individuals looking to work with the best minds to build the future.
-      </p>
+      <div class="text-gov">
+        <strong>Government</strong><br/>
+        <p>
+          Powerful individuals looking to work with the best minds to build the future.
+        </p>
+      </div>
       <img class="laptop" src="images/laptop.jpg" alt="Startups">
-      <p class="text-startup">
-        <strong>Startups</strong><br/><br/>
-        Entreoreneurs looking to innovate and make a global impact.
-      </p>
+      <div class="text-startup">
+        <strong>Startups</strong>
+        <p>
+          Entreoreneurs looking to innovate and make a global impact.
+        </p>
+      </div>
       <img  class="boardroom" src="images/boardroom.jpg" alt="Corporate">
-      <p class="text-corp">
-        <strong>Corporate</strong><br/><br/>
-        Powerful organisations collaborating to build a better future.
-      </p>
+      <div class="text-corp">
+        <strong>Corporate</strong>
+        <p>
+          Powerful organisations collaborating to build a better future.
+        </p>
+      </div>
       <img class="pedestrians" src="images/pedestrians2.jpg" alt="Public">
-      <p class="text-public">
-        <strong>Public</strong><br/><br/>
-        Come meet others who want to make a change.
-      </p>
+      <div class="text-public">
+        <strong>Public</strong>
+        <p>
+          Come meet others who want to make a change.
+        </p>
+      </div>
     </div>
 
-    <div class="foot"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+<br/><br/><br/><br/>
+    <div class="foot"><br/><br/><br/><br/> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </div>
 
   </body>
