challenge row added Co-authored-by: Paul Rail <paul.a.rail@gmail.com>

--- a/index.html
+++ b/index.html
@@ -106,8 +106,18 @@
       </div>
     </div>
 
+    <div class="challenge">
+      <img class ="quote-img" src="images/chevrons.png" alt="chevrons">
+      <h1 class="challenge-title">The Area 2071 Challenge
+      </h1>
+      <p class="challenge-text">
+        Compete on a battlefield to solve a global problem and win a year of incubation and invaluable resources to make it happen. Your success, is everyone's success.
+      </p>
+      <p class="challenge-link">
+        ACCEPT THE CHALLENGE  &nbsp;&nbsp;&nbsp; -->
+    </div>
 
-<br/><br/><br/><br/>
+
     <div class="foot"><br/><br/><br/><br/> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </div>
 
