--- a/index.html
+++ b/index.html
@@ -117,6 +117,29 @@
         ACCEPT THE CHALLENGE  &nbsp;&nbsp;&nbsp; -->
     </div>
 
+    <div class="news">
+      <div class="news1">
+        <img  class="news-img" src="images/boardroom.jpg" alt="Corporate">
+        <p>26 Jul, 2017</p>
+        <strong>
+          The Incubator launch is drawing the attention
+        </strong>
+      </div>
+      <div class="news2">
+        <img  class="news-img" src="images/boardroom.jpg" alt="Corporate">
+        <p>23 Jul, 2017</p>
+        <strong>
+          Area 2071 startup has raised $5 million
+        </strong>
+      </div>
+      <div class="news3">
+        <img  class="news-img" src="images/boardroom.jpg" alt="Corporate">
+        <p>18 Jul, 2017</p>
+        <strong>
+          UAE's MOHESR has funded new wing for Area 2071
+        </strong>
+      </div>
+    </div>
 
     <div class="foot"><br/><br/><br/><br/> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </div>
