footer and navbar
Co-authored-by: Paul Rail <paul.a.rail@gmail.com>

--- a/index.html
+++ b/index.html
@@ -4,20 +4,31 @@
     <meta charset="utf-8">
     <title>Area 2071 Challenge</title>
     <link href="https://fonts.googleapis.com/css?family=Palanquin" rel="stylesheet">
+    <!-- Font Awesome for Social Media Icons -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg" crossorigin="anonymous">
 
     <!-- Primary CSS -->
     <link rel="stylesheet" href="style.css">
   </head>
   <body class="site">
 
-    <div class="topbar">ABOUT PRODUCTS & DESIGN CHALLENGE  ------ ENGLISH / LANGUAGE </div>
+    <div class="topbar">
+      <ul>
+        <li><a href="#about">ABOUT</a></li>
+        <li><a href="#products">PRODUCTS &nbsp; & &nbsp; OFFERINGS</a></li>
+        <li><a href="#space">SPACE &nbsp; & &nbsp; DESIGN</a></li>
+        <li><a href="#challenge">CHALLENGE</a></li>
+        <li>-----------------------------</li>
+        <li>ENGLISH &nbsp;/ &nbsp;LANGUAGE</li>
+      </ul>
+    </div>
 
     <h1 class="explore-text">Explore new ways to garden.</h1>
     <img class="explore-img" src="images/kaleidoscope-faded.jpg" alt="explore-image">
     <img class="explore-img-small" src="images/kaleidoscope-faded-small.jpg" alt="explore-image-small">
 
     <img class="girl-nebula-img" src="images/girl-nebula.jpg">
-    <div class="girl-nebula">
+    <div id="about" class="girl-nebula">
       <h2>
         We will unlock people's potential to imagine and
         create new solutions to our greatest challenges
@@ -58,7 +69,7 @@
       </p>
     </div>
     <img class="lounge" src="images/lounge.jpg" alt="lounge">
-    <div class="lounge-verbage">
+    <div id="products" class="lounge-verbage">
       <p class="lounge-text">
         <strong>Area 2071 Environment</strong>
         In this space, innovators will meet and use the best technology of today to design the future
@@ -70,7 +81,7 @@
     </div>
 
     <div class="vision">
-      <h1 class="title-v">We create a vision
+      <h1 id="space" class="title-v">We create a vision
       of the future
     </h1>
       <p class="text-v">
@@ -107,7 +118,7 @@
     </div>
 
     <div class="challenge">
-      <img class ="quote-img" src="images/chevrons.png" alt="chevrons">
+      <img id="challenge" class ="quote-img" src="images/chevrons.png" alt="chevrons">
       <h1 class="challenge-title">The Area 2071 Challenge
       </h1>
       <p class="challenge-text">
@@ -141,7 +152,16 @@
       </div>
     </div>
 
-    <div class="foot"><br/><br/><br/><br/> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+
+    <div class="foot">
+      <div class="social-media">
+        <i class="fab fa-instagram"></i>
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-twitter"></i>
+      </div>
+      <p class="copyright">
+        Area 2071. All rights reserved.
+      </p>
     </div>
 
   </body>
