Static visuals complete
Co-authored-by: Kyle Lemon <james.kyle.lemon@gmail.com>

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   </head>
   <body class="site">
 
+    <img class ="logo-img" src="images/logo.jpg" alt="logo">
     <div class="topbar">
       <ul>
         <li><a href="#about">ABOUT</a></li>
@@ -127,6 +128,10 @@
       <p class="challenge-link">
         ACCEPT THE CHALLENGE  &nbsp;&nbsp;&nbsp; -->
     </div>
+    <div class="lower-topo">
+      <img src="images/topo-lower3.jpg" alt="topo-graphic" class="lower-topo">
+    </div>
+
 
     <div class="news">
       <div class="news1">
@@ -165,4 +170,5 @@
     </div>
 
   </body>
+  <script type="text/javascript" src="script.js"></script>
 </html>
