got image animation working
Co-authored-by: Kyle Lemon <james.kyle.lemon@gmail.com>

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <img class="explore-img-small" src="images/kaleidoscope-faded-small.jpg" alt="explore-image-small">
 
     <img class="girl-nebula-img" src="images/girl-nebula.jpg">
+    <div class="grey-nebula"></div>
+    <div class="white-nebula"></div>
     <div id="about" class="girl-nebula">
       <h2>
         We will unlock people's potential to imagine and
