lounge image animation added
Co-authored-by: Paul Rail <paul.a.rail@gmail.com>

--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
         — Sheikh Mohammed bin Rashid al Maktoum
       </p>
     </div>
-    <img class="lounge" src="images/lounge.jpg" alt="lounge">
+
+    <img class="lounge-img" src="images/lounge.jpg" alt="lounge">
+    <div class="grey-lounge"></div>
     <div id="products" class="lounge-verbage">
       <p class="lounge-text">
         <strong>Area 2071 Environment</strong>
