added animations to all images in vision section

--- a/index.html
+++ b/index.html
@@ -92,28 +92,36 @@
       <p class="text-v">
         We will grow together in this community and thrive. As pioneers, we will forge a new path to address human needs.
       </p>
-      <img class="bking" src="images/bking.jpg" alt="Government">
+      <img class="bking-img" src="images/bking.jpg" alt="Government">
+      <div class="grey-bking"></div>
+      <div class="white-bking"></div>
       <div class="text-gov">
         <strong>Government</strong><br/>
         <p>
           Powerful individuals looking to work with the best minds to build the future.
         </p>
       </div>
-      <img class="laptop" src="images/laptop.jpg" alt="Startups">
+      <img class="laptop-img" src="images/laptop.jpg" alt="Startups">
+      <div class="grey-laptop"></div>
+      <div class="white-laptop"></div>
       <div class="text-startup">
         <strong>Startups</strong>
         <p>
           Entreoreneurs looking to innovate and make a global impact.
         </p>
       </div>
-      <img  class="boardroom" src="images/boardroom.jpg" alt="Corporate">
+      <img  class="boardroom-img" src="images/boardroom.jpg" alt="Corporate">
+      <div class="grey-boardroom"></div>
+      <div class="white-boardroom"></div>
       <div class="text-corp">
         <strong>Corporate</strong>
         <p>
           Powerful organisations collaborating to build a better future.
         </p>
       </div>
-      <img class="pedestrians" src="images/pedestrians2.jpg" alt="Public">
+      <img class="pedestrians-img" src="images/pedestrians2.jpg" alt="Public">
+      <div class="grey-pedestrians"></div>
+      <div class="white-pedestrians"></div>
       <div class="text-public">
         <strong>Public</strong>
         <p>
