animation to challenge button on hover and arrows

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <h1 class="explore-text">Explore new ways to garden.</h1>
     <img class="explore-img" src="images/kaleidoscope-faded.jpg" alt="explore-image">
     <img class="explore-img-small" src="images/kaleidoscope-faded-small.jpg" alt="explore-image-small">
+    <span class="downarrow">↓</span>
 
     <img class="girl-nebula-img" src="images/girl-nebula.jpg">
     <div class="grey-nebula"></div>
@@ -138,7 +139,7 @@
         Compete on a battlefield to solve a global problem and win a year of incubation and invaluable resources to make it happen. Your success, is everyone's success.
       </p>
       <p class="challenge-link">
-        ACCEPT THE CHALLENGE  &nbsp;&nbsp;&nbsp; -->
+        ACCEPT THE CHALLENGE  &nbsp;&nbsp;&nbsp; <span>→</span>
     </div>
     <div class="lower-topo">
       <img src="images/topo-lower3.jpg" alt="topo-graphic" class="lower-topo">
