paddings and challenge text movement

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     </div>
 
     <div class="challenge">
-      <img id="challenge" class ="quote-img" src="images/chevrons.png" alt="chevrons">
+      <img id="challenge" class ="challenge-chevron" src="images/chevrons.png" alt="chevrons">
       <h1 class="challenge-title">The Area 2071 Challenge
       </h1>
       <p class="challenge-text">
