learn more links styling
Co-authored-by: Paul Rail <paul.a.rail@gmail.com>

--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
       <p class="lounge-text">
         <strong>Area 2071 Environment</strong>
         In this space, innovators will meet and use the best technology of today to design the future
-      <a href="">LEARN MORE</a>
+        <a class="learn-link" href="">LEARN MORE  &nbsp;&nbsp;&nbsp; <span>→</span></a>
+        <div class="orange-box"></div>
       </p>
     </div>
     <div class="lounge-topo">
@@ -92,6 +93,7 @@
     </h1>
       <p class="text-v">
         We will grow together in this community and thrive. As pioneers, we will forge a new path to address human needs.
+        <a class="learn-more" href=""><div class="orange-box2"></div>LEARN MORE  &nbsp;&nbsp;&nbsp; <span>→</span></a>
       </p>
       <img class="bking-img" src="images/bking.jpg" alt="Government">
       <div class="grey-bking"></div>
