animated texts up and down reversibly on scroll

--- a/index.html
+++ b/index.html
@@ -150,21 +150,21 @@
 
     <div class="news">
       <div class="news1">
-        <img  class="news-img" src="images/boardroom.jpg" alt="Corporate">
+        <img  class="news-img" src="images/news1.jpg" alt="Corporate">
         <p>26 Jul, 2017</p>
         <strong>
           The Incubator launch is drawing the attention
         </strong>
       </div>
       <div class="news2">
-        <img  class="news-img" src="images/boardroom.jpg" alt="Corporate">
+        <img  class="news-img" src="images/news2.jpg" alt="Corporate">
         <p>23 Jul, 2017</p>
         <strong>
           Area 2071 startup has raised $5 million
         </strong>
       </div>
       <div class="news3">
-        <img  class="news-img" src="images/boardroom.jpg" alt="Corporate">
+        <img  class="news-img" src="images/news3.jpg" alt="Corporate">
         <p>18 Jul, 2017</p>
         <strong>
           UAE's MOHESR has funded new wing for Area 2071
