explore text and image animation

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     </div>
 
     <img class="lounge-img" src="images/lounge.jpg" alt="lounge">
-    <div class="grey-lounge"></div>
-    <div id="products" class="lounge-verbage">
+    <div id="products" class="grey-lounge"></div>
+    <div class="lounge-verbage">
       <p class="lounge-text">
         <strong>Area 2071 Environment</strong>
         In this space, innovators will meet and use the best technology of today to design the future
