portrait mobile layout

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 
     <!-- Primary CSS -->
     <link rel="stylesheet" href="style.css">
+    <!-- Responsive CSS -->
+    <link rel="stylesheet" href="responsive.css">
+
+
   </head>
   <body class="site">
 
