added viewport meta tag

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Area 2071 Challenge</title>
     <link href="https://fonts.googleapis.com/css?family=Palanquin" rel="stylesheet">
     <!-- Font Awesome for Social Media Icons -->
