mobile font size and spacing

--- a/index.html
+++ b/index.html
@@ -66,6 +66,17 @@
       </p>
     </div>
 
+    <p class="mobile-nebula-text-2">
+      AREA 2071 is a creative ecosystem to
+      design the future that includes
+      government, creative individuals,
+      business, and people from all walks of
+      life. We've come together to imagine
+      and create solutions to the world's
+      most pressing questions.
+    </p>
+
+
 
 
     <div class="quote">
