replace govt image and fix spacings
Co-authored-by: Paul Rail <paul.a.rail@gmail.com>

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         We will grow together in this community and thrive. As pioneers, we will forge a new path to address human needs.
         <a class="learn-more" href=""><div class="orange-box2"></div>LEARN MORE  &nbsp;&nbsp;&nbsp; <span>→</span></a>
       </p>
-      <img class="bking-img" src="images/bking.jpg" alt="Government">
+      <img class="bking-img" src="images/bahrain-man.jpg" alt="Government">
       <div class="grey-bking"></div>
       <div class="white-bking"></div>
       <div class="text-gov">
